--- a/docker-compose_qsticky.yml
+++ b/docker-compose_qsticky.yml
@@ -14,5 +14,11 @@ services:
       GLUETUN_APIKEY: put_api_key_here
       # qSticky settings
       LOG_LEVEL: INFO
-    restart: unless-stopped
-    # user: "1000:1000" # Optional: run as same user as qBittorrent if needed
+    healthcheck:
+      test: ["CMD", "cat /app/health/status.json | grep -q '\"api_connected\": true' || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+      start_interval: 5s
+    restart: on-failure
