--- a/docker-compose_stack.yml
+++ b/docker-compose_stack.yml
@@ -4,28 +4,21 @@ services:
     image: qmcgaw/gluetun:latest
     cap_add:
       - NET_ADMIN
+    devices:
+      - /dev/net/tun:/dev/net/tun
     environment:
       VPN_SERVICE_PROVIDER: protonvpn
       VPN_TYPE: wireguard
       VPN_PORT_FORWARDING: on
-      WIREGUARD_PRIVATE_KEY: your_private_key
-      WIREGUARD_ADDRESSES: your_wireguard_ip
+      WIREGUARD_PRIVATE_KEY: 'YOURKEY'
+      WIREGUARD_ADDRESSES: 'IP'
       SERVER_COUNTRIES: Netherlands
-      # Control server config for qSticky
       GLUETUN_HTTP_CONTROL_SERVER_ENABLE: on
-      GLUETUN_HTTP_CONTROL_SERVER_PORT: 8000
-      GLUETUN_HTTP_CONTROL_SERVER_APIKEY: your_api_key_here
     volumes:
       - ./gluetun/config.toml:/gluetun/auth/config.toml # https://github.com/qdm12/gluetun-wiki/blob/main/setup/advanced/control-server.md#authentication
     ports:
       - 8080:8080  # qBittorrent WebUI
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/v1/openvpn/status"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
-    restart: on-failure
+    restart: always
 
   qbittorrent:
     container_name: qbittorrent
@@ -46,32 +39,29 @@ services:
       retries: 3
       start_period: 30s
       start_interval: 5s
-    restart_policy: on-failure
+    restart: always
     depends_on:
       - gluetun
 
-  qSticky:
-    container_name: qSticky
+  qsticky2:
     image: ghcr.io/monstermuffin/qSticky:latest
-    network_mode: container:gluetun
+    container_name: qsticky2
     environment:
-      # qBittorrent settings
-      QBITTORRENT_HOST: localhost
+      # qbittorrent settings
+      QBITTORRENT_HOST: gluetun
       QBITTORRENT_HTTPS: false
       QBITTORRENT_PORT: 8080
       QBITTORRENT_USER: admin
-      QBITTORRENT_PASS: adminadmin
-      # Gluetun settings
-      GLUETUN_AUTH_TYPE: apikey # https://github.com/qdm12/gluetun-wiki/blob/main/setup/advanced/control-server.md#authentication
-      GLUETUN_APIKEY: your_api_key_here
+      QBITTORRENT_PASS: 'YOURPASS'
+      # gluetun settings
+      GLUETUN_HOST: gluetun
+      GLUETUN_AUTH_TYPE: apikey
+      GLUETUN_APIKEY: 'YOURAPIKEY'
       # qSticky settings
       LOG_LEVEL: INFO
     healthcheck:
-      test: ["CMD", "cat", "/tmp/health/status.json"]
-      interval: 1m
+      test: ["CMD", "python3", "-c", "import json; exit(0 if json.load(open('/app/health/status.json'))['healthy'] else 1)"]
+      interval: 30s
       timeout: 10s
       retries: 3
-    restart: on-failure
-    depends_on:
-      - gluetun
-      - qbittorrent
+    restart: always
