chore: renovate pin 3.13

--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,12 @@
       {
         "matchPackageNames": ["python"],
         "ignoreUnstable": true,
-        "allowedVersions": "<3.13"
+        "allowedVersions": "<=3.13"
+      },
+      {
+        "matchDatasources": ["docker"],
+        "matchPackageNames": ["python"],
+        "allowedVersions": "<3.14"
       }
     ],
     "docker": {
